--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
 
   # Backend Services
   user-service:
-    build: ./services/user-service
+    build: ./user-service
     ports:
       - "3001:3001"
     environment:
@@ -57,7 +57,7 @@ services:
         condition: service_healthy
 
   product-service:
-    build: ./services/product-service
+    build: ./product-service
     ports:
       - "5001:5001"
     environment:
@@ -76,7 +76,7 @@ services:
         condition: service_healthy
 
   inventory-service:
-    build: ./services/inventory-service
+    build: ./inventory-service
     ports:
       - "5002:5002"
     environment:
@@ -91,21 +91,21 @@ services:
         condition: service_healthy
 
   payment-service:
-    build: ./services/payment-service
+    build: ./payment-service
     ports:
       - "3003:3003"
     environment:
       PORT: 3003
 
   notification-service:
-    build: ./services/notification-service
+    build: ./notification-service
     ports:
       - "3004:3004"
     environment:
       PORT: 3004
 
   order-service:
-    build: ./services/order-service
+    build: ./order-service
     ports:
       - "3002:3002"
     environment:
@@ -129,7 +129,7 @@ services:
         condition: service_started
 
   review-service:
-    build: ./services/review-service
+    build: ./review-service
     ports:
       - "3005:3005"
     environment:
@@ -140,7 +140,7 @@ services:
         condition: service_healthy
 
   analytics-service:
-    build: ./services/analytics-service
+    build: ./analytics-service
     ports:
       - "5003:5003"
     environment:
@@ -155,7 +155,7 @@ services:
         condition: service_healthy
 
   api-gateway:
-    build: ./services/api-gateway
+    build: ./api-gateway
     ports:
       - "3000:3000"
     environment:
@@ -180,7 +180,7 @@ services:
       - analytics-service
 
   frontend:
-    build: ./services/frontend
+    build: ./frontend
     ports:
       - "80:80"
     environment:
