--- a/helm/ecommerce/templates/order-service-deployment.yaml
+++ b/helm/ecommerce/templates/order-service-deployment.yaml
@@ -1,10 +1,11 @@
+{{- if .Values.orderService.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: order-service
-  namespace: ecommerce
+  namespace: {{ .Values.global.namespace }}
 spec:
-  replicas: 2
+  replicas: {{ .Values.orderService.replicaCount }}
   selector:
     matchLabels:
       app: order-service
@@ -15,7 +16,8 @@ spec:
     spec:
       containers:
       - name: order-service
-        image: <YOUR_ECR_REGISTRY>/ecommerce-order-service:latest
+        image: {{ .Values.global.imageRegistry }}/{{ .Values.orderService.image.repository }}:{{ .Values.global.imageTag }}
+        imagePullPolicy: {{ .Values.global.imagePullPolicy }}
         ports:
         - containerPort: 3002
         env:
@@ -26,11 +28,11 @@ spec:
         - name: DB_PORT
           value: "5432"
         - name: DB_NAME
-          value: "orderdb"
+          value: {{ .Values.orderService.database }}
         - name: DB_USER
-          value: "postgres"
+          value: {{ .Values.databases.postgres.user }}
         - name: DB_PASSWORD
-          value: "postgres"
+          value: {{ .Values.databases.postgres.password }}
         - name: INVENTORY_SERVICE_URL
           value: "http://inventory-service:5002"
         - name: PAYMENT_SERVICE_URL
@@ -38,12 +40,7 @@ spec:
         - name: NOTIFICATION_SERVICE_URL
           value: "http://notification-service:3004"
         resources:
-          requests:
-            memory: "128Mi"
-            cpu: "100m"
-          limits:
-            memory: "256Mi"
-            cpu: "300m"
+          {{- toYaml .Values.orderService.resources | nindent 10 }}
         livenessProbe:
           httpGet:
             path: /health
@@ -56,15 +53,4 @@ spec:
             port: 3002
           initialDelaySeconds: 10
           periodSeconds: 5
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: order-service
-  namespace: ecommerce
-spec:
-  selector:
-    app: order-service
-  ports:
-  - port: 3002
-    targetPort: 3002
+{{- end }}
