--- a/helm/ecommerce/templates/postgres.yaml
+++ b/helm/ecommerce/templates/postgres.yaml
@@ -1,29 +1,30 @@
+{{- if .Values.databases.postgres.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: postgres-config
-  namespace: ecommerce
+  namespace: {{ .Values.global.namespace }}
 data:
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: postgres
+  POSTGRES_USER: {{ .Values.databases.postgres.user }}
+  POSTGRES_PASSWORD: {{ .Values.databases.postgres.password }}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
-  namespace: ecommerce
+  namespace: {{ .Values.global.namespace }}
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
+      storage: {{ .Values.databases.postgres.storageSize }}
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: postgres
-  namespace: ecommerce
+  namespace: {{ .Values.global.namespace }}
 spec:
   serviceName: postgres
   replicas: 1
@@ -58,12 +59,7 @@ spec:
         - name: postgres-storage
           mountPath: /var/lib/postgresql/data
         resources:
-          requests:
-            memory: "256Mi"
-            cpu: "250m"
-          limits:
-            memory: "512Mi"
-            cpu: "500m"
+          {{- toYaml .Values.databases.postgres.resources | nindent 10 }}
       volumes:
       - name: postgres-storage
         persistentVolumeClaim:
@@ -73,7 +69,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
-  namespace: ecommerce
+  namespace: {{ .Values.global.namespace }}
 spec:
   selector:
     app: postgres
@@ -81,3 +77,4 @@ spec:
   - port: 5432
     targetPort: 5432
   clusterIP: None
+{{- end }}
