--- a/helm/ecommerce/templates/product-service-deployment.yaml
+++ b/helm/ecommerce/templates/product-service-deployment.yaml
@@ -1,10 +1,11 @@
+{{- if .Values.productService.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: product-service
-  namespace: ecommerce
+  namespace: {{ .Values.global.namespace }}
 spec:
-  replicas: 2
+  replicas: {{ .Values.productService.replicaCount }}
   selector:
     matchLabels:
       app: product-service
@@ -15,7 +16,8 @@ spec:
     spec:
       containers:
       - name: product-service
-        image: <YOUR_ECR_REGISTRY>/ecommerce-product-service:latest
+        image: {{ .Values.global.imageRegistry }}/{{ .Values.productService.image.repository }}:{{ .Values.global.imageTag }}
+        imagePullPolicy: {{ .Values.global.imagePullPolicy }}
         ports:
         - containerPort: 5001
         env:
@@ -26,22 +28,17 @@ spec:
         - name: DB_PORT
           value: "5432"
         - name: DB_NAME
-          value: "productdb"
+          value: {{ .Values.productService.database }}
         - name: DB_USER
-          value: "postgres"
+          value: {{ .Values.databases.postgres.user }}
         - name: DB_PASSWORD
-          value: "postgres"
+          value: {{ .Values.databases.postgres.password }}
         - name: REDIS_HOST
           value: "redis"
         - name: REDIS_PORT
           value: "6379"
         resources:
-          requests:
-            memory: "128Mi"
-            cpu: "100m"
-          limits:
-            memory: "256Mi"
-            cpu: "300m"
+          {{- toYaml .Values.productService.resources | nindent 10 }}
         livenessProbe:
           httpGet:
             path: /health
@@ -54,15 +51,4 @@ spec:
             port: 5001
           initialDelaySeconds: 10
           periodSeconds: 5
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: product-service
-  namespace: ecommerce
-spec:
-  selector:
-    app: product-service
-  ports:
-  - port: 5001
-    targetPort: 5001
+{{- end }}
