--- a/helm/ecommerce/templates/redis.yaml
+++ b/helm/ecommerce/templates/redis.yaml
@@ -1,8 +1,9 @@
+{{- if .Values.databases.redis.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis
-  namespace: ecommerce
+  namespace: {{ .Values.global.namespace }}
 spec:
   replicas: 1
   selector:
@@ -20,21 +21,17 @@ spec:
         - containerPort: 6379
           name: redis
         resources:
-          requests:
-            memory: "128Mi"
-            cpu: "100m"
-          limits:
-            memory: "256Mi"
-            cpu: "200m"
+          {{- toYaml .Values.databases.redis.resources | nindent 10 }}
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: redis
-  namespace: ecommerce
+  namespace: {{ .Values.global.namespace }}
 spec:
   selector:
     app: redis
   ports:
   - port: 6379
     targetPort: 6379
+{{- end }}
